# edziekanat

./: .env.example  .gitignore  Dockerfile  alembic.ini  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: c6d84116cc83_added_students_table.py
app/: dependencies.py  main.py
app/db/: startup.py
app/internal/: config.py  lifespan.py
app/routers/: security.py  students.py
app/security/: models.py  repo.py  service.py  types.py
app/students/: models.py  repo.py  service.py  types.py
app/utils/: auth.py  validators.py
tests/app/utils/: validators.py
